---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
    - Import and export player personal logistics requests as blueprint templates.
    - Import and export spidertron personal logistics requests as blueprint templates.
    - Replace and append mode of operation for import.
    - Set trash-all requests (maximum amount of zero) for all currently unrequested items.
  Bugfixes: