@@ -3,3 +3,4 @@ plt-export=Export personal logistics template
 plt-import=Import personal logistics template
 plt-append=Append personal logistics template
 plt-auto-trash=Auto-trash all unrequested items
+plt-clear-requests=Clear all personal logistics requests
