@@ -4,3 +4,4 @@ plt-invalid-template=[color=red][ERROR][/color] Blueprint does not contain valid
 plt-invalid-export-attempt=[color=red][ERROR][/color] It is not possible to export personal logistics template for this type of entity.
 plt-invalid-import-attempt=[color=red][ERROR][/color] It is not possible to import personal logistics template for this type of entity.
 plt-invalid-auto-trash-attempt=[color=red][ERROR][/color] It is not possible to set auto-trash requests for this type of entity.
+plt-invalid-clear-attempt=[color=red][ERROR][/color] It is not possible to clear personal logistics requests for this type of entity.
